@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc1
 
+	- The httpFlush() function did not always flush the
+	  remaining response data in requests (STR #558)
 	- The scheduler could complete a job before it collected
 	  the exit status from all filters and the backend (STR
 	  #448)
